Bug 313834 - Nepomuk now depends on Virtuoso 6.1.6
Summary: Nepomuk now depends on Virtuoso 6.1.6
Status: RESOLVED FIXED
Alias: None
Product: nepomuk
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: git master
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Nepomuk Bugs Coordination
URL: http://paste.kde.org/655658/
Keywords:
Depends on:
Blocks:
 
Reported: 2013-01-24 15:56 UTC by Emil Sedgh
Modified: 2013-08-01 11:55 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Emil Sedgh 2013-01-24 15:56:46 UTC
According to Vishesh (on #nepomuk-kde), Nepomuk in KDE 4.10 has a depenency on Virtuoso 6.1.6.
However, it never complains about older versions, thus nepomuk tries indexing all the time (and failes all the time).

Reproducible: Always
Comment 1 Vishesh Handa 2013-07-09 08:39:56 UTC
Git commit 3b3fe19275d2147db21446d8ab1420316d124009 by Vishesh Handa.
Committed on 08/07/2013 at 23:10.
Pushed by vhanda into branch 'master'.

Storage: Perform a runtime check for virtuoso 6.1.6

We only work with virtuoso 6.1.6.

This requires a newer version of Soprano to be released

M  +1    -1    CMakeLists.txt
M  +22   -1    services/storage/repository.cpp
M  +4    -0    services/storage/repository.h

http://commits.kde.org/nepomuk-core/3b3fe19275d2147db21446d8ab1420316d124009
Comment 2 Andrea Scarpino 2013-07-27 07:03:59 UTC
Does this break with virtuoso 6.1.7? (relased few days ago)
Comment 3 Vishesh Handa 2013-08-01 11:55:41 UTC
Git commit 0e01d5b59ab6ee566c4290b75d764c72e80c567d by Vishesh Handa.
Committed on 28/07/2013 at 22:37.
Pushed by vhanda into branch 'KDE/4.11'.

Repository: Support virtuoso version 6.1.6 and beyond

Not version 7 though

M  +4    -2    services/storage/repository.cpp

http://commits.kde.org/nepomuk-core/0e01d5b59ab6ee566c4290b75d764c72e80c567d