Storage: Perform a runtime check for virtuoso 6.1.6

We only work with virtuoso 6.1.6.

This requires a newer version of Soprano to be released

BUG: 313834